--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </nav>
     <main class="main">
         <div>
-            <img src="img/rocabrujahoja(1).png" alt="">
+            <img src="img/rocabrujaisologotipo.png" alt="">
         </div>
     </main>
     <footer class="footer footer_600">
