Se modificio el index y la galeria, se agrego boostrap y animacion

--- a/index.html
+++ b/index.html
@@ -5,44 +5,66 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://use.typekit.net/ffv2nsn.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
     <title>Pilotos</title>
 </head>
-<body class="grillasite">
-    <header class="header">
-        <div>
-            <img src="img/rocahoja.png" alt="">
+<body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark" data-aos="fade-up" data-aos-anchor-placement="top-center"data-aos-duration="1000">
+        <div class="container-fluid">
+          <img src="img/rocahoja.png" width="15px" alt="">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link" href="html/ingresos.html">Ingresos</a>
+              <a class="nav-link" href="html/eventos.html">Eventos</a>
+              <a class="nav-link" href="html/galeria.html">Galeria</a>
+              <a class="nav-link" href="html/contacto.html">Contacto</a>
+            </div>
+          </div>
         </div>
-    </header>
-    <nav class="menu">
-    <ul>
-        <li><a href="./index.html">Inicio</a></li>
-        <li><a href="html/ingresos.html">Ingresos</a></li>
-        <li><a href="html/eventos.html">Eventos</a></li>
-        <li><a href="html/galeria.html">Galeria</a></li>
-        <li><a href="html/contacto.html">Contacto</a></li>
-    </ul>
-    </nav>
+      </nav>
+
     <main class="main">
-        <div>
-            <img src="img/rocabrujaisologotipo.png" alt="">
+        <div data-aos="fade-up" data-aos-anchor-placement="top-center"data-aos-duration="2000">
+            <img src="img/rocabrujaisologotipobrillo.png" alt="">
         </div>
     </main>
-    <footer class="footer footer_600">
-        <div class="card_foot_celu card_foot_celu_600">
-            <h2>Donde estamos</h2>
-            <p>Av.RocaBruja 458</p>
-        </div>
-        <div  class="card_foot_celu card_foot_celu_600">
-            <h2>REDES SOCIALES</h2>
-            <img src="img/insta.png" width="11%" alt="">
-        </div>
-        <div class="card_foot_celu card_foot_celu_600">
-            <h2 class=>WebSite by</h2>
-            <p>By Perri</p>                
-        </div>
-    </footer>
 
+    <div class="card-group">
+        <div class="card bg-dark text-warning">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          </div>
+        </div>
+        <div class="card bg-dark text-warning">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+            <img src="../img/insta.png" width="11%" alt="">
+          </div>
+        </div>
+        <div class="card bg-dark text-warning">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+          </div>
+        </div>
+      </div>
+
+
+
+
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+     AOS.init();
+    </script>
 
 </body>
-</html>
+</html> 
