--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-            <img src="../img/insta.png" width="11%" alt="">
+            <a href="https://www.instagram.com/rocabruja_/?hl=es"><img src="img/insta.png" width="11%" alt=""></a>
           </div>
         </div>
         <div class="card bg-dark text-warning">
