--- a/index.html
+++ b/index.html
@@ -39,21 +39,20 @@
     <div class="card-group">
         <div class="card bg-dark text-warning">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <h5 class="card-title">DONDE ESTAMOS</h5>
+            <p class="card-text">Av.RocaBruja 4872 </p>
           </div>
         </div>
         <div class="card bg-dark text-warning">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+            <h5 class="card-title">REDES SOCILES</h5>
             <a href="https://www.instagram.com/rocabruja_/?hl=es"><img src="img/insta.png" width="11%" alt=""></a>
           </div>
         </div>
         <div class="card bg-dark text-warning">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+            <h5 class="card-title">Creado</h5>
+            <p class="card-text">by perri</p>
           </div>
         </div>
       </div>
