--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <title>Pilotos</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark" data-aos="fade-up" data-aos-anchor-placement="top-center"data-aos-duration="1000">
+    <p>hoilajksjkhfdjshafjgeajklfdkjsa</p>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark" data-aos="fade-up" data-aos-anchor-placement="top-center"data-aos-duration="1000">
         <div class="container-fluid">
           <img src="img/rocahoja.png" width="15px" alt="">
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
