se modifico el index y la galeria para agregar grillas de boostrap

--- a/index.html
+++ b/index.html
@@ -4,66 +4,56 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://use.typekit.net/ffv2nsn.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="./css/style.css">
-    <title>Pilotos</title>
+    <link rel="stylesheet" href="https://use.typekit.net/ffv2nsn.css">
+    <link rel="stylesheet" href="css/estilos.css">
+    <title>Prueba de Grilla</title>
 </head>
 <body>
+  <div class="bg-black">
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark" data-aos="fade-up" data-aos-anchor-placement="top-center"data-aos-duration="1000">
-        <div class="container-fluid">
-          <img src="img/rocahoja.png" width="15px" alt="">
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-              <a class="nav-link" href="html/ingresos.html">Ingresos</a>
-              <a class="nav-link" href="html/eventos.html">Eventos</a>
-              <a class="nav-link" href="html/galeria.html">Galeria</a>
-              <a class="nav-link" href="html/contacto.html">Contacto</a>
-            </div>
-          </div>
-        </div>
-      </nav>
-      
-    <main class="main">
-        <div data-aos="fade-up" data-aos-anchor-placement="top-center"data-aos-duration="2000">
-            <img src="img/rocabrujaisologotipobrillo.png" alt="">
-        </div>
-    </main>
-
-    <div class="card-group">
-        <div class="card bg-dark text-warning">
-          <div class="card-body">
-            <h5 class="card-title">DONDE ESTAMOS</h5>
-            <p class="card-text">Av.RocaBruja 4872 </p>
-          </div>
-        </div>
-        <div class="card bg-dark text-warning">
-          <div class="card-body">
-            <h5 class="card-title">REDES SOCILES</h5>
-            <a href="https://www.instagram.com/rocabruja_/?hl=es"><img src="img/insta.png" width="11%" alt=""></a>
-          </div>
-        </div>
-        <div class="card bg-dark text-warning">
-          <div class="card-body">
-            <h5 class="card-title">Creado</h5>
-            <p class="card-text">by perri</p>
-          </div>
+    <div class="container-fluid">
+      <img class="img_menu" src="img/rocahoja.png" alt="">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+          <a class="nav-link" href="ingresos.html">Ingresos</a>
+          <a class="nav-link" href="eventos.html">Eventos</a>
+          <a class="nav-link" href="html/galeria.html">Galeria2</a>
+          <a class="nav-link" href="contacto.html">Contacto</a>
         </div>
       </div>
+    </div>
+  </nav>
+    <div class="bg-black">
+      <div class="container bg-black">
+        <div class="row div1" >
+          <div class="col-lg-12 col-xs-12 mb-4 div_portada">
+            <img class="img_portada" src="img/rocabrujaisologotipobrillo.png" alt="">
+          </div>
+       </div>
+     </div>
+     <div class="row div_footer" >
+        <div class="col-lg-4 col-xs-1 mb-4">
+            <p>DEONDE ESTAMOS</p>
+            <P class="texto_futer_secundario">AV.ROCA BRUJA 5543</P>
+        </div>
+        <div class="col-lg-4 col-xs-1 mb-4">
+            <P>REDES SOCIALES</P>
+            <a href="https://www.instagram.com/rocabruja_/?hl=es"><img src="img/insta(1).png" alt=""></a>
+        </div>
+        <div class="col-lg-4 col-xs-1 mb-4">
+            <P>CREADO POR</P>
+            <p class="texto_futer_secundario">by Perri</p>
+        </div> 
+      </div>
+    </div>
 
-
-
-
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>
-     AOS.init();
-    </script>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+  </div>
 </body>
-</html> 
+</html>
+
