--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.typekit.net/ffv2nsn.css">
     <link rel="stylesheet" href="css/estilos.css">
-    <title>Prueba de Grilla</title>
+    <title>RocaBruja</title>
 </head>
 <body>
   <div class="bg-black">
@@ -22,7 +22,7 @@
           <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
           <a class="nav-link" href="ingresos.html">Ingresos</a>
           <a class="nav-link" href="eventos.html">Eventos</a>
-          <a class="nav-link" href="html/galeria.html">Galeria2</a>
+          <a class="nav-link" href="html/galeria.html">Galeria</a>
           <a class="nav-link" href="contacto.html">Contacto</a>
         </div>
       </div>
