Se agrego animaciones y boostrap a todas las secciones, ademas se organizo el codigo para mayo legibilidad

--- a/html/eventos.html
+++ b/html/eventos.html
@@ -6,24 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.typekit.net/ffv2nsn.css">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/estilos.css">
-    <title>RocaBruja</title>
+    <link rel="stylesheet" href="../css/estilos.css">
+    <title>RocaBruja Eventos</title>
 </head>
 <body>
   <div class="bg-black">
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark" data-aos="fade-up" data-aos-anchor-placement="top-center"data-aos-duration="1000">
     <div class="container-fluid">
-      <img class="img_menu" src="img/rocahoja.png" alt="">
+      <img class="img_menu" src="../img/rocahoja.png" alt="">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
           <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
-          <a class="nav-link" href="html/ingresos.html">Ingresos</a>
-          <a class="nav-link" href="html/eventos.html">Eventos</a>
-          <a class="nav-link" href="html/galeria.html">Galeria</a>
+          <a class="nav-link" href="ingresos.html">Ingresos</a>
+          <a class="nav-link" href="eventos.html">Eventos</a>
+          <a class="nav-link" href="galeria.html">Galeria</a>
           <a class="nav-link" href="contacto.html">Contacto</a>
         </div>
       </div>
@@ -31,33 +30,35 @@
   </nav>
     <div class="bg-black">
       <div class="container bg-black">
-        <div class="row div1" >
-          <div class="col-lg-12 col-xs-12 mb-4 div_portada">
-            <img class="img_portada " data-aos="zoom-in" src="img/rocabrujaisologotipobrillo.png" alt="">
+        <div class="row div1 div1_eventos" >
+          <div class="col-lg-12 col-xs-1 mb-4 rocahoja">
+            <img src="../img/rocalogo.png" alt="">
+          </div>
+          <div class="col-lg-6 col-xs-1 mb-4">
+            <img class="img_evento" src="../img/dankeNegro1.png" alt="">
+          </div>
+          <div class="col-lg-6 col-xs-1 mb-4">
+            <img class="img_evento" src="../img/dankeRosa2.png" alt="">
           </div>
        </div>
-     </div>
-     <div class="row div_footer" >
-        <div class="col-lg-4 col-xs-1 mb-4">
-            <p>DEONDE ESTAMOS</p>
-            <P class="texto_futer_secundario">AV.ROCA BRUJA 5543</P>
-        </div>
-        <div class="col-lg-4 col-xs-1 mb-4">
-            <P>REDES SOCIALES</P>
-            <a href="https://www.instagram.com/rocabruja_/?hl=es"><img src="img/insta(1).png" alt=""></a>
-        </div>
-        <div class="col-lg-4 col-xs-1 mb-4">
-            <P>CREADO POR</P>
-            <p class="texto_futer_secundario">by Perri</p>
-        </div> 
-      </div>
     </div>
-
+  </div>
+  <div class="row div_footer" >
+    <div class="col-lg-4 col-xs-1 mb-4">
+      <p>DEONDE ESTAMOS</p>
+      <P class="texto_futer_secundario">AV.ROCA BRUJA 5543</P>
+    </div>
+    <div class="col-lg-4 col-xs-1 mb-4">
+      <P>REDES SOCIALES</P>
+      <a href="https://www.instagram.com/rocabruja_/?hl=es"><img src="../img/insta(1).png" alt=""></a>
+    </div>
+    <div class="col-lg-4 col-xs-1 mb-4">
+      <P>CREADO POR</P>
+      <p class="texto_futer_secundario">by Perri</p>
+    </div> 
+  </div>
+</div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>
-      AOS.init();
-    </script>
   </div>
 </body>
 </html>
