--- a/html/contacto.html
+++ b/html/contacto.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.typekit.net/ffv2nsn.css">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/estilos.css">
     <title>Prueba de Grilla</title>
 </head>
@@ -35,47 +34,45 @@
           <div class="col-lg-12 col-xs-1 mb-4 rocahoja">
             <img src="../img/rocalogo.png" alt="">
           </div>
-          <div class="col-lg-4 col-xs-1 mb-4">
-            <img data-aos="flip-up" data-aos-duration="1500" src="../img/fotoroca1.jpg" alt="">
-            <img data-aos="flip-left"
-            data-aos-easing="ease-out-cubic"
-            data-aos-duration="2000" src="../img/fotoroca2.jpg" alt="">
-          </div>
-          <div class="col-lg-4 col-xs-1 mb-4">
-            <img data-aos="fade-down"
-            data-aos-easing="linear"
-            data-aos-duration="1500" src="../img/fotoroca3.jpg" alt="">
-            <img data-aos="fade-down"
-            data-aos-easing="linear"
-            data-aos-duration="1500" src="../img/fotoroca4.jpg" alt="">
-          </div>
-          <div class="col-lg-4 col-xs-1 mb-4">
-            <img data-aos="flip-left"
-            data-aos-easing="ease-out-cubic"
-            data-aos-duration="2000" src="../img/fotoroca5.jpg" alt="">
-            <img  data-aos="flip-up" data-aos-duration="1500" src="../img/fotoroca6.jpg" alt="">
-          </div>
-          <div class="col-lg-4 col-xs-1 mb-4">
-            <img data-aos="fade-down"
-            data-aos-easing="linear"
-            data-aos-duration="1500" src="../img/fotoroca1.jpg" alt="">
-            <img src="../img/fotoroca2.jpg" alt="">
-          </div>
-          <div class="col-lg-4 col-xs-1 mb-4">
-            <img src="../img/fotoroca3.jpg" alt="">
-            <img data-aos="fade-down"
-            data-aos-easing="linear"
-            data-aos-duration="1500" src="../img/fotoroca4.jpg" alt="">
-          </div>
-          <div class="col-lg-4 col-xs-1 mb-4">
-            <img data-aos="fade-down"
-            data-aos-easing="linear"
-            data-aos-duration="1500" src="../img/fotoroca5.jpg" alt="">
-            <img src="../img/fotoroca6.jpg" alt="">
+          <div class="col-lg-12 col-xs-1 mb-4">
+            <div class="form_cont">
+              <form class="row g-3 needs-validation" novalidate>
+                <div class="col-md-5">
+                  <label for="validationCustom01" class="form-label">NOMBRE</label>
+                  <input type="text" class="form-control" id="validationCustom01" value="" required>
+                </div>
+                <div class="col-md-5">
+                  <label for="validationCustom02" class="form-label">APELLIDO</label>
+                  <input type="text" class="form-control" id="validationCustom02" value="" required>
+                </div>
+                <div class="col-md-2">
+                  <label for="validationCustomUsername" class="form-label">INSTAGRAM DE CONTACTO</label>
+                  <div class="input-group has-validation">
+                    <span class="input-group-text" id="inputGroupPrepend">@</span>
+                    <input type="text" class="form-control" id="validationCustomUsername" aria-describedby="inputGroupPrepend" required>
+                  </div>
+                </div>
+                <div class="col-md-6">
+                  <label for="validationCustom03" class="form-label">¿QUE QUERIAS COMENTARNOS?</label>
+                  <input type="text" class="form-control" id="validationCustom03" required>
+                </div>
+                <div class="col-md-2">
+                  <label for="validationCustom04" class="form-label">¿Sos MAYOR A 18 AÑOS?</label>
+                  <select class="form-select" id="validationCustom04" required>
+                    <option selected disabled value=""></option>
+                    <option>Si</option>
+                    <option>No</option>
+                  </select>
+                </div>
+                <div class="col-12">
+                  <button class="btn btn-primary" type="submit">Enviar</button>
+                </div>
+              </form>
+            </div>
           </div>
        </div>
+      </div>
     </div>
-  </div>
   <div class="row div_footer" >
     <div class="col-lg-4 col-xs-1 mb-4">
       <p>DEONDE ESTAMOS</p>
@@ -93,11 +90,11 @@
 </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </div>
-
-  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>
-      AOS.init();
-    </script>
 </body>
 </html>
+
+
+
+
+
 
