--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <a class="nav-link" href="html/ingresos.html">Ingresos</a>
           <a class="nav-link" href="html/eventos.html">Eventos</a>
           <a class="nav-link" href="html/galeria.html">Galeria</a>
-          <a class="nav-link" href="contacto.html">Contacto</a>
+          <a class="nav-link" href="html/contacto.html">Contacto</a>
         </div>
       </div>
     </div>
