--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
           <a class="nav-link" href="html/eventos.html">Eventos</a>
           <a class="nav-link" href="html/galeria.html">Galeria</a>
           <a class="nav-link" href="html/contacto.html">Contacto</a>
+          <a class="nav-link" href="html/mixin.html">Mixin</a>
         </div>
       </div>
     </div>
