--- a/html/extend.html
+++ b/html/extend.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="Boliche, galeria boliche, foto boliche, Boliche castelar, Musica castelar, Baile, Bailar, Baile castelar, RocaBruja, Zona oeste, Boliche zona oeste">
+    <meta name="keywords" content="mixin">
     <meta name="description" content="Somos el mejor boliche de zona oeste, estamos ubicados en Castelar, tenemos un ambiente espectacular de musica y diversion">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.typekit.net/ffv2nsn.css">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/estilos.css">
-    <title>RocaBruja- Galeria</title>
+    <title>Rocabruja- Mixin</title>
 </head>
 <body>
   <div class="bg-black">
@@ -28,58 +27,35 @@
           <a class="nav-link" href="galeria.html">Galeria</a>
           <a class="nav-link" href="contacto.html">Contacto</a>
           <a class="nav-link" href="mixin.html">Mixin</a>
-          <a class="nav-link" href="extend.html">Extend</a>
         </div>
       </div>
     </div>
   </nav>
-    <div class="bg-black">
-      <div class="container bg-black">
-        <div class="row div1" >
-          <div class="col-lg-12 col-xs-1 mb-4 rocahoja">
-            <img src="../img/rocalogo.png" alt="">
-          </div>
-          <div class="col-lg-4 col-xs-1 mb-4">
-            <img data-aos="flip-up" data-aos-duration="1500" src="../img/fotoroca1.jpg" alt="">
-            <img data-aos="flip-left"
-            data-aos-easing="ease-out-cubic"
-            data-aos-duration="2000" src="../img/fotoroca2.jpg" alt="">
-          </div>
-          <div class="col-lg-4 col-xs-1 mb-4">
-            <img data-aos="fade-down"
-            data-aos-easing="linear"
-            data-aos-duration="1500" src="../img/fotoroca3.jpg" alt="">
-            <img data-aos="fade-down"
-            data-aos-easing="linear"
-            data-aos-duration="1500" src="../img/fotoroca4.jpg" alt="">
-          </div>
-          <div class="col-lg-4 col-xs-1 mb-4">
-            <img data-aos="flip-left"
-            data-aos-easing="ease-out-cubic"
-            data-aos-duration="2000" src="../img/fotoroca5.jpg" alt="">
-            <img  data-aos="flip-up" data-aos-duration="1500" src="../img/fotoroca6.jpg" alt="">
-          </div>
-          <div class="col-lg-4 col-xs-1 mb-4">
-            <img data-aos="fade-down"
-            data-aos-easing="linear"
-            data-aos-duration="1500" src="../img/fotoroca1.jpg" alt="">
-            <img src="../img/fotoroca2.jpg" alt="">
-          </div>
-          <div class="col-lg-4 col-xs-1 mb-4">
-            <img src="../img/fotoroca3.jpg" alt="">
-            <img data-aos="fade-down"
-            data-aos-easing="linear"
-            data-aos-duration="1500" src="../img/fotoroca4.jpg" alt="">
-          </div>
-          <div class="col-lg-4 col-xs-1 mb-4">
-            <img data-aos="fade-down"
-            data-aos-easing="linear"
-            data-aos-duration="1500" src="../img/fotoroca5.jpg" alt="">
-            <img src="../img/fotoroca6.jpg" alt="">
-          </div>
-       </div>
-    </div>
+   
+
+
+  <div class="extend_circulo1">
+
+
   </div>
+
+  <div class="extend_circulo2">
+
+
+  </div>
+
+  <div class="extend_circulo3">
+
+
+  </div>
+
+  <div class="extend_circulo4">
+
+
+</div>
+
+
+
   <div class="row div_footer" >
     <div class="col-lg-4 col-xs-1 mb-4">
       <p>DEONDE ESTAMOS</p>
@@ -97,11 +73,11 @@
 </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </div>
-
-  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>
-      AOS.init();
-    </script>
 </body>
 </html>
+
+
+
+
+
 
