--- a/html/ingresos.html
+++ b/html/ingresos.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Boliche, galeria boliche, foto boliche, Boliche castelar, Musica castelar, Baile, Bailar, Baile castelar, RocaBruja, Zona oeste, Boliche zona oeste">
+    <meta name="description" content="Somos el mejor boliche de zona oeste, estamos ubicados en Castelar, tenemos un ambiente espectacular de musica y diversion">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.typekit.net/ffv2nsn.css">
     <link rel="stylesheet" href="../css/estilos.css">
-    <title>Prueba de Grilla</title>
+    <title>RocaBruja- Ingresos</title>
 </head>
 <body>
   <div class="bg-black">
@@ -24,6 +26,8 @@
           <a class="nav-link" href="eventos.html">Eventos</a>
           <a class="nav-link" href="galeria.html">Galeria</a>
           <a class="nav-link" href="contacto.html">Contacto</a>
+          <a class="nav-link" href="mixin.html">Mixin</a>
+          <a class="nav-link" href="extend.html">Extend</a>
         </div>
       </div>
     </div>
