--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Boliche, Boliche castelar, Musica castelar, Baile, Bailar, Baile castelar, RocaBruja, Zona oeste, Boliche zona oeste, bar, bares, noche, noche castelar"> 
+    <meta name="description" content="Somos el mejor boliche de zona oeste, estamos ubicados en Castelar, tenemos un ambiente espectacular de musica y diversion">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.typekit.net/ffv2nsn.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="css/estilos.css">
-    <title>RocaBruja</title>
+    <title>RocaBruja- Home</title>
 </head>
 <body>
   <div class="bg-black">
