--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
           <a class="nav-link" href="html/galeria.html">Galeria</a>
           <a class="nav-link" href="html/contacto.html">Contacto</a>
           <a class="nav-link" href="html/mixin.html">Mixin</a>
+          <a class="nav-link" href="html/extend.html">Extend</a>
         </div>
       </div>
     </div>
