--- a/html/eventos.html
+++ b/html/eventos.html
@@ -27,7 +27,7 @@
           <a class="nav-link" href="galeria.html">Galeria</a>
           <a class="nav-link" href="contacto.html">Contacto</a>
           <a class="nav-link" href="mixin.html">Mixin</a>
-          <a class="nav-link" href="mixin.html">Extend.html</a>
+          <a class="nav-link" href="extend.html">Extend</a>
         </div>
       </div>
     </div>
