--- a/html/ingresos.html
+++ b/html/ingresos.html
@@ -37,43 +37,36 @@
         <div class="row div1" >
           <div class="col-lg-12 col-xs-1 mb-4 rocahoja">
             <img src="../img/rocalogo.png" alt="">
+          </div>  
+          <div class="contenedor_card">
+            <div>
+           <img class="card_img" src="../img/card_mesa_vip.png" alt="">
           </div>
-          <div class="col-lg-4 col-xs-1 mb-4 text_ingresos">
-            <h2>MESAS VIP</h2>   
-            <p>Mesa Vip Roca Back $90.000</p>
-            <p>Mesa Vip Roca  $70.000</p>
-            <p>Mesa Vip Roca Campo $50.000</p>
-            <p>Precintos $10.000</p>
-          </div>
-          <div class="col-lg-4 col-xs-1 mb-4 text_ingresos">
-            <h2>COMBOS</h2>
-            <p>Combo black $17.000</p>
-            <p>Combo Gold $12.000</p>
-            <p>Combo Red $10.000</p>
-            <p>Precintos $5.000</p>
-          </div>
-          <div class="col-lg-4 col-xs-1 mb-4 text_ingresos">
-            <h2>INGRESOS</h2>
-            <p>Hombres $3000</p>
-            <p>Mujeres $2500</p>
-          </div>
+          <div>
+            <img class="card_img" src="../img/card_mesa_combos.png" alt="">
+           </div>
+           <div>
+            <img class="card_img" src="../img/card_mesa_ingresos.png" alt="">
+           </div>
        </div>
     </div>
   </div>
-  <div class="row div_footer" >
-    <div class="col-lg-4 col-xs-1 mb-4">
-      <p>DEONDE ESTAMOS</p>
-      <P class="texto_futer_secundario">AV.ROCA BRUJA 5543</P>
-    </div>
-    <div class="col-lg-4 col-xs-1 mb-4">
-      <P>REDES SOCIALES</P>
-      <a href="https://www.instagram.com/rocabruja_/?hl=es"><img src="../img/insta(1).png" alt=""></a>
-    </div>
-    <div class="col-lg-4 col-xs-1 mb-4">
-      <P>CREADO POR</P>
-      <p class="texto_futer_secundario">by Perri</p>
-    </div> 
-  </div>
+  <div class="container bg-black">
+    <div class="row div_footer" >
+       <div class="col-lg-4 col-xs-1 mb-4">
+           <p>DEONDE ESTAMOS</p>
+           <P class="texto_futer_secundario">AV.ROCA BRUJA 5543</P>
+       </div>
+       <div class="col-lg-4 col-xs-1 mb-4">
+           <P>REDES SOCIALES</P>
+           <a href="https://www.instagram.com/rocabruja_/?hl=es"><img src="../img/insta(1).png" alt=""></a>
+       </div>
+       <div class="col-lg-4 col-xs-1 mb-4">
+           <P>CREADO POR</P>
+           <p class="texto_futer_secundario">by Perri</p>
+       </div> 
+     </div>
+   </div>
 </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </div>
