--- a/index.html
+++ b/index.html
@@ -22,13 +22,11 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+          <a class="nav-link active" aria-current="page" href="index.html">Home</a>
           <a class="nav-link" href="html/ingresos.html">Ingresos</a>
           <a class="nav-link" href="html/eventos.html">Eventos</a>
           <a class="nav-link" href="html/galeria.html">Galeria</a>
           <a class="nav-link" href="html/contacto.html">Contacto</a>
-          <a class="nav-link" href="html/mixin.html">Mixin</a>
-          <a class="nav-link" href="html/extend.html">Extend</a>
         </div>
       </div>
     </div>
@@ -37,10 +35,11 @@
       <div class="container bg-black">
         <div class="row div1" >
           <div class="col-lg-12 col-xs-12 mb-4 div_portada">
-            <img class="img_portada " data-aos="zoom-in" src="img/rocabrujaisologotipobrillo.png" alt="">
+            <img class="img_portada"   src="img/rocabrujaisologotipobrillo.png" alt="">
           </div>
        </div>
      </div>
+     <div class="container bg-black">
      <div class="row div_footer" >
         <div class="col-lg-4 col-xs-1 mb-4">
             <p>DEONDE ESTAMOS</p>
@@ -56,6 +55,7 @@
         </div> 
       </div>
     </div>
+  </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
