Se agrego el mixin responsive y se finalizo con la seccion ingresos

--- a/html/ingresos.html
+++ b/html/ingresos.html
@@ -39,13 +39,13 @@
             <img src="../img/rocalogo.png" alt="">
           </div>  
           <div class="contenedor_card">
-            <div>
+            <div class="contenedor_img">
            <img class="card_img" src="../img/card_mesa_vip.png" alt="">
           </div>
-          <div>
+          <div class="contenedor_img">
             <img class="card_img" src="../img/card_mesa_combos.png" alt="">
            </div>
-           <div>
+           <div class="contenedor_img">
             <img class="card_img" src="../img/card_mesa_ingresos.png" alt="">
            </div>
        </div>
