--- a/html/galeria.html
+++ b/html/galeria.html
@@ -80,20 +80,22 @@
        </div>
     </div>
   </div>
-  <div class="row div_footer" >
-    <div class="col-lg-4 col-xs-1 mb-4">
-      <p>DEONDE ESTAMOS</p>
-      <P class="texto_futer_secundario">AV.ROCA BRUJA 5543</P>
-    </div>
-    <div class="col-lg-4 col-xs-1 mb-4">
-      <P>REDES SOCIALES</P>
-      <a href="https://www.instagram.com/rocabruja_/?hl=es"><img src="../img/insta(1).png" alt=""></a>
-    </div>
-    <div class="col-lg-4 col-xs-1 mb-4">
-      <P>CREADO POR</P>
-      <p class="texto_futer_secundario">by Perri</p>
-    </div> 
-  </div>
+  <div class="container bg-black">
+    <div class="row div_footer" >
+       <div class="col-lg-4 col-xs-1 mb-4">
+           <p>DEONDE ESTAMOS</p>
+           <P class="texto_futer_secundario">AV.ROCA BRUJA 5543</P>
+       </div>
+       <div class="col-lg-4 col-xs-1 mb-4">
+           <P>REDES SOCIALES</P>
+           <a href="https://www.instagram.com/rocabruja_/?hl=es"><img src="../img/insta(1).png" alt=""></a>
+       </div>
+       <div class="col-lg-4 col-xs-1 mb-4">
+           <P>CREADO POR</P>
+           <p class="texto_futer_secundario">by Perri</p>
+       </div> 
+     </div>
+   </div>
 </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </div>
