--- a/html/eventos.html
+++ b/html/eventos.html
@@ -26,8 +26,6 @@
           <a class="nav-link" href="eventos.html">Eventos</a>
           <a class="nav-link" href="galeria.html">Galeria</a>
           <a class="nav-link" href="contacto.html">Contacto</a>
-          <a class="nav-link" href="mixin.html">Mixin</a>
-          <a class="nav-link" href="extend.html">Extend</a>
         </div>
       </div>
     </div>
@@ -38,12 +36,13 @@
           <div class="col-lg-12 col-xs-1 mb-4 rocahoja">
             <img src="../img/rocalogo.png" alt="">
           </div>
-          <div class="col-lg-6 col-xs-1 mb-4">
-            <img class="img_evento" src="../img/dankeNegro1.png" alt="">
-          </div>
-          <div class="col-lg-6 col-xs-1 mb-4">
-            <img class="img_evento" src="../img/dankeRosa2.png" alt="">
-          </div>
+          <div class="contenedor_eventos">
+            <div class="contenedor_foto_evento">
+              <img class="foto_eventos" src="../img/dankeNegro1.png" alt="">
+            </div>
+            <div class="contenedor_foto_evento">
+              <img class="foto_eventos" src="../img/dankeRosa2.png" alt="">
+            </div>
        </div>
     </div>
   </div>
