finalizacion del sitio

--- a/html/ingresos.html
+++ b/html/ingresos.html
@@ -36,17 +36,17 @@
       <div class="container bg-black">
         <div class="row div1" >
           <div class="col-lg-12 col-xs-1 mb-4 rocahoja">
-            <img src="../img/rocalogo.png" alt="">
+            <img src="../img/rocalogo.png" alt="Logo_Rocabruja">
           </div>  
           <div class="contenedor_card">
             <div class="contenedor_img">
-           <img class="card_img" src="../img/card_mesa_vip.png" alt="">
+           <img class="card_img" src="../img/card_mesa_vip.png" alt="mesa_vip">
           </div>
           <div class="contenedor_img">
-            <img class="card_img" src="../img/card_mesa_combos.png" alt="">
+            <img class="card_img" src="../img/card_mesa_combos.png" alt="Entrada_combos">
            </div>
            <div class="contenedor_img">
-            <img class="card_img" src="../img/card_mesa_ingresos.png" alt="">
+            <img class="card_img" src="../img/card_mesa_ingresos.png" alt="Ingreso_general">
            </div>
        </div>
     </div>
