se modificaron los alt de cada imagen

--- a/html/eventos.html
+++ b/html/eventos.html
@@ -15,7 +15,7 @@
   <div class="bg-black">
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark" data-aos="fade-up" data-aos-anchor-placement="top-center"data-aos-duration="1000">
     <div class="container-fluid">
-      <img class="img_menu" src="../img/rocahoja.png" alt="">
+      <img class="img_menu" src="../img/rocahoja.png" alt="Logo_RocaBruja">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -34,7 +34,7 @@
       <div class="container bg-black">
         <div class="row div1 div1_eventos" >
           <div class="col-lg-12 col-xs-1 mb-4 rocahoja">
-            <img src="../img/rocalogo.png" alt="">
+            <img src="../img/rocalogo.png" alt="Logo_RocaBruja">
           </div>
           <div class="div_danke" >
             <div>
@@ -46,10 +46,10 @@
         </div>
           <div class="contenedor_eventos">
             <div class="contenedor_foto_evento">
-              <img class="foto_eventos" src="../img/dankeNegro1.png" alt="">
+              <img class="foto_eventos" src="../img/dankeNegro1.png" alt="Foto_del_evento">
             </div>
             <div class="contenedor_foto_evento">
-              <img class="foto_eventos" src="../img/dankeRosa2.png" alt="">
+              <img class="foto_eventos" src="../img/dankeRosa2.png" alt="Foto_del_evento">
             </div>
           </div>
         </div>   
@@ -74,7 +74,7 @@
         </div>
         <div class="col-lg-4 col-xs-1 mb-4">
           <P>REDES SOCIALES</P>
-          <a href="https://www.instagram.com/rocabruja_/?hl=es"><img src="../img/insta(1).png" alt=""></a>
+          <a href="https://www.instagram.com/rocabruja_/?hl=es"><img src="../img/insta(1).png" alt="Logo_instagram"></a>
         </div>
         <div class="col-lg-4 col-xs-1 mb-4">
           <P>CREADO POR</P>
