--- a/html/galeria.html
+++ b/html/galeria.html
@@ -16,7 +16,7 @@
   <div class="bg-black">
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark" data-aos="fade-up" data-aos-anchor-placement="top-center"data-aos-duration="1000">
     <div class="container-fluid">
-      <img class="img_menu" src="../img/rocahoja.png" alt="">
+      <img class="img_menu" src="../img/rocahoja.png" alt="Logo_RocaBruja">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -27,8 +27,6 @@
           <a class="nav-link" href="eventos.html">Eventos</a>
           <a class="nav-link" href="galeria.html">Galeria</a>
           <a class="nav-link" href="contacto.html">Contacto</a>
-          <a class="nav-link" href="mixin.html">Mixin</a>
-          <a class="nav-link" href="extend.html">Extend</a>
         </div>
       </div>
     </div>
@@ -37,44 +35,44 @@
       <div class="container bg-black">
         <div class="row div1" >
           <div class="col-lg-12 col-xs-1 mb-4 rocahoja">
-            <img src="../img/rocalogo.png" alt="">
+            <img src="../img/rocalogo.png" alt="Logo_RocaBruja">
           </div>
           <div class="col-lg-4 col-xs-1 mb-4">
-            <img data-aos="flip-up" data-aos-duration="1500" src="../img/fotoroca1.jpg" alt="">
+            <img data-aos="flip-up" data-aos-duration="1500" src="../img/fotoroca1.jpg" alt="Foto_galeria">
             <img data-aos="flip-left"
             data-aos-easing="ease-out-cubic"
-            data-aos-duration="2000" src="../img/fotoroca2.jpg" alt="">
+            data-aos-duration="2000" src="../img/fotoroca2.jpg" alt="Foto_galeria">
           </div>
           <div class="col-lg-4 col-xs-1 mb-4">
             <img data-aos="fade-down"
             data-aos-easing="linear"
-            data-aos-duration="1500" src="../img/fotoroca3.jpg" alt="">
+            data-aos-duration="1500" src="../img/fotoroca3.jpg" alt="Foto_galeria">
             <img data-aos="fade-down"
             data-aos-easing="linear"
-            data-aos-duration="1500" src="../img/fotoroca4.jpg" alt="">
+            data-aos-duration="1500" src="../img/fotoroca4.jpg" alt="Foto_galeria">
           </div>
           <div class="col-lg-4 col-xs-1 mb-4">
             <img data-aos="flip-left"
             data-aos-easing="ease-out-cubic"
-            data-aos-duration="2000" src="../img/fotoroca5.jpg" alt="">
-            <img  data-aos="flip-up" data-aos-duration="1500" src="../img/fotoroca6.jpg" alt="">
+            data-aos-duration="2000" src="../img/fotoroca5.jpg" alt="Foto_galeria">
+            <img  data-aos="flip-up" data-aos-duration="1500" src="../img/fotoroca6.jpg" alt="Foto_galeria">
           </div>
           <div class="col-lg-4 col-xs-1 mb-4">
             <img data-aos="fade-down"
             data-aos-easing="linear"
-            data-aos-duration="1500" src="../img/fotoroca1.jpg" alt="">
-            <img src="../img/fotoroca2.jpg" alt="">
+            data-aos-duration="1500" src="../img/fotoroca1.jpg" alt="Foto_galeria">
+            <img src="../img/fotoroca2.jpg" alt="Foto_galeria">
           </div>
           <div class="col-lg-4 col-xs-1 mb-4">
-            <img src="../img/fotoroca3.jpg" alt="">
+            <img src="../img/fotoroca3.jpg" alt="Foto_galeria">
             <img data-aos="fade-down"
             data-aos-easing="linear"
-            data-aos-duration="1500" src="../img/fotoroca4.jpg" alt="">
+            data-aos-duration="1500" src="../img/fotoroca4.jpg" alt="Foto_galeria">
           </div>
           <div class="col-lg-4 col-xs-1 mb-4">
             <img data-aos="fade-down"
             data-aos-easing="linear"
-            data-aos-duration="1500" src="../img/fotoroca5.jpg" alt="">
+            data-aos-duration="1500" src="../img/fotoroca5.jpg" alt="Foto_galeria">
             <img src="../img/fotoroca6.jpg" alt="">
           </div>
        </div>
@@ -88,7 +86,7 @@
        </div>
        <div class="col-lg-4 col-xs-1 mb-4">
            <P>REDES SOCIALES</P>
-           <a href="https://www.instagram.com/rocabruja_/?hl=es"><img src="../img/insta(1).png" alt=""></a>
+           <a href="https://www.instagram.com/rocabruja_/?hl=es"><img src="../img/insta(1).png" alt="Logo_instagram"></a>
        </div>
        <div class="col-lg-4 col-xs-1 mb-4">
            <P>CREADO POR</P>
