--- a/html/contacto.html
+++ b/html/contacto.html
@@ -15,7 +15,7 @@
   <div class="bg-black">
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark" data-aos="fade-up" data-aos-anchor-placement="top-center"data-aos-duration="1000">
     <div class="container-fluid">
-      <img class="img_menu" src="../img/rocahoja.png" alt="">
+      <img class="img_menu" src="../img/rocahoja.png" alt="imagen_Rocabruja">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -26,8 +26,6 @@
           <a class="nav-link" href="eventos.html">Eventos</a>
           <a class="nav-link" href="galeria.html">Galeria</a>
           <a class="nav-link" href="contacto.html">Contacto</a>
-          <a class="nav-link" href="mixin.html">Mixin</a>
-          <a class="nav-link" href="extend.html">Extend</a>
         </div>
       </div>
     </div>
@@ -36,7 +34,7 @@
       <div class="container bg-black">
         <div class="row div1" >
           <div class="col-lg-12 col-xs-1 mb-4 rocahoja">
-            <img src="../img/rocalogo.png" alt="">
+            <img src="../img/rocalogo.png" alt="Logo_RocaBruja">
           </div>
           <div class="col-lg-12 col-xs-1 mb-4">
             <div class="form_cont">
@@ -50,7 +48,7 @@
                   <input type="text" class="form-control" id="validationCustom02" value="" required>
                 </div>
                 <div class="col-md-2">
-                  <label for="validationCustomUsername" class="form-label">INSTAGRAM DE CONTACTO</label>
+                  <label for="validationCustomUsername" class="form-label">@INSTAGRAM</label>
                   <div class="input-group has-validation">
                     <span class="input-group-text" id="inputGroupPrepend">@</span>
                     <input type="text" class="form-control" id="validationCustomUsername" aria-describedby="inputGroupPrepend" required>
@@ -61,7 +59,7 @@
                   <input type="text" class="form-control" id="validationCustom03" required>
                 </div>
                 <div class="col-md-2">
-                  <label for="validationCustom04" class="form-label">¿Sos MAYOR A 18 AÑOS?</label>
+                  <label for="validationCustom04" class="form-label">¿MAYOR A 18?</label>
                   <select class="form-select" id="validationCustom04" required>
                     <option selected disabled value=""></option>
                     <option>Si</option>
@@ -85,7 +83,7 @@
          </div>
          <div class="col-lg-4 col-xs-1 mb-4">
              <P>REDES SOCIALES</P>
-             <a href="https://www.instagram.com/rocabruja_/?hl=es"><img src="../img/insta(1).png" alt=""></a>
+             <a href="https://www.instagram.com/rocabruja_/?hl=es"><img src="../img/insta(1).png" alt="Logo_instagram"></a>
          </div>
          <div class="col-lg-4 col-xs-1 mb-4">
              <P>CREADO POR</P>
