--- a/html/ingresos.html
+++ b/html/ingresos.html
@@ -26,8 +26,6 @@
           <a class="nav-link" href="eventos.html">Eventos</a>
           <a class="nav-link" href="galeria.html">Galeria</a>
           <a class="nav-link" href="contacto.html">Contacto</a>
-          <a class="nav-link" href="mixin.html">Mixin</a>
-          <a class="nav-link" href="extend.html">Extend</a>
         </div>
       </div>
     </div>
@@ -59,7 +57,7 @@
        </div>
        <div class="col-lg-4 col-xs-1 mb-4">
            <P>REDES SOCIALES</P>
-           <a href="https://www.instagram.com/rocabruja_/?hl=es"><img src="../img/insta(1).png" alt=""></a>
+           <a href="https://www.instagram.com/rocabruja_/?hl=es"><img src="../img/insta(1).png" alt="Logo_instagram"></a>
        </div>
        <div class="col-lg-4 col-xs-1 mb-4">
            <P>CREADO POR</P>
