--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <div class="bg-black">
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark" data-aos="fade-up" data-aos-anchor-placement="top-center"data-aos-duration="1000">
     <div class="container-fluid">
-      <img class="img_menu" src="img/rocahoja.png" alt="">
+      <img class="img_menu" src="img/rocahoja.png" alt="Logo_Rocabruja">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -35,7 +35,7 @@
       <div class="container bg-black">
         <div class="row div1" >
           <div class="col-lg-12 col-xs-12 mb-4 div_portada">
-            <img class="img_portada"   src="img/rocabrujaisologotipobrillo.png" alt="">
+            <img class="img_portada"   src="img/rocabrujaisologotipobrillo.png" alt="Logo_RocaBruja">
           </div>
        </div>
      </div>
@@ -47,7 +47,7 @@
         </div>
         <div class="col-lg-4 col-xs-1 mb-4">
             <P>REDES SOCIALES</P>
-            <a href="https://www.instagram.com/rocabruja_/?hl=es"><img src="img/insta(1).png" alt=""></a>
+            <a href="https://www.instagram.com/rocabruja_/?hl=es"><img src="img/insta(1).png" alt="Logo_instagram"></a>
         </div>
         <div class="col-lg-4 col-xs-1 mb-4">
             <P>CREADO POR</P>
